<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_new_tab"
        android:title="@string/new_tab" />
    <item
        android:id="@+id/menu_reload"
        android:title="@string/reload" />
    <item
        android:id="@+id/menu_default_browser"
        android:title="@string/set_default_browser" />
    <item
        android:id="@+id/menu_close_tab"
        android:title="@string/close_tab" />
    <item
        android:id="@+id/menu_downloads"
        android:title="@string/downloads" />
    <item
        android:id="@+id/menu_clear_cache"
        android:title="@string/clear_cache" />
    <item
        android:id="@+id/menu_clear_browsing_data"
        android:title="@string/clear_browsing_data" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/about_dag" />
</menu>
